# tag-scanner

./: .gitignore  AUTHORS  CMakeLists.txt  Manual.md  README.md
snap/: snapcraft.yaml
snap/gui/: fort-tag-scanner.desktop
src/: ApriltagDetector.cpp  ApriltagDetector.hpp  ApriltagSettings.cpp  ApriltagSettings.hpp  ApriltagSettings.ui  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraSettings.cpp  CameraSettings.hpp  CameraSettings.ui  DetectionProcess.cpp  DetectionProcess.hpp  DetectionView.cpp  DetectionView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/resources/icons/flaticon.com/: LICENSE.md
